--- a/style.css
+++ b/style.css
@@ -366,6 +366,89 @@ label[for="check"] {
 }
 
 /* ——————————————————————————————————————— 
+  DEFAULT - RESET
+——————————————————————————————————————————————————— */
+/* Default CSS Values 
+a:link, a:visited { 
+  color:  browser's internal value ;
+  text-decoration: underline;
+  cursor: auto;
+}
+
+a:link:active, a:visited:active { 
+  color:  browser's internal value ;
+}    ... */
+
+/* ——————————————————————————————————————— 
+  COLOR
+——————————————————————————————————————————————————— */
+/*  RGBA Color  */
+.rgba-demo .p1 {
+  background-color: rgba(255, 0, 0, 0.3);
+}
+.rgba-demo .p2 {
+  background-color: rgba(0, 255, 0, 0.3);
+}
+.rgba-demo .p3 {
+  background-color: rgba(0, 0, 255, 0.3);
+}
+.rgba-demo .p4 {
+  background-color: rgba(192, 192, 192, 0.3);
+}
+.rgba-demo .p5 {
+  background-color: rgba(255, 255, 0, 0.3);
+}
+.rgba-demo .p6 {
+  background-color: rgba(255, 0, 255, 0.3);
+}
+
+/*  HSLA Colors  */
+.hsla-demo .p1 {
+  background-color: hsla(120, 100%, 50%, 0.3);
+}
+.hsla-demo .p2 {
+  background-color: hsla(120, 100%, 75%, 0.3);
+}
+.hsla-demo .p3 {
+  background-color: hsla(120, 100%, 25%, 0.3);
+}
+.hsla-demo .p4 {
+  background-color: hsla(120, 60%, 70%, 0.3);
+}
+.hsla-demo .p5 {
+  background-color: hsla(290, 100%, 50%, 0.3);
+}
+.hsla-demo .p6 {
+  background-color: hsla(290, 60%, 70%, 0.3);
+}
+
+/*  CSS opacity Property  */
+.opacity-demo .p1 {
+  background-color: rgb(255, 0, 0);
+  opacity: 0.1;
+}
+.opacity-demo .p2 {
+  background-color: rgb(0, 255, 0);
+  opacity: 0.2;
+}
+.opacity-demo .p3 {
+  background-color: rgb(0, 0, 255);
+  opacity: 0.4;
+}
+.opacity-demo .p4 {
+  background-color: rgb(192, 192, 192);
+  opacity: 0.6;
+}
+.opacity-demo .p5 {
+  background-color: rgb(255, 255, 0);
+  opacity: 0.8;
+}
+.opacity-demo .p6 {
+  background-color: rgb(255, 0, 255);
+  opacity: 1;
+}
+
+/* ——————————————————————————————————————— 
   BOX MODEL 
 ——————————————————————————————————————————————————— */
 
